# neuralnoise

./: .bumpversion.cfg  .cursorrules  .gitignore  README.md  messages.json  pyproject.toml
.github/workflows/: publish.yml
config/: ai_podcast_config.json  app_config.json  app_config_v2.json  app_config_v3.json  app_config_v4.json  config_elevenlabs.json  config_openai.json
neuralnoise/: app.py  cli.py  generate copy.py  types.py
prompts/: content_analysis.system.xml  content_analysis.user.xml  script_generation.system.xml  script_generation.user.xml
src/neuralnoise/: __init__.py  cli.py  extract.py  tts.py  types.py
src/neuralnoise/prompts/: script_generation.system.xml
src/neuralnoise/studio/: agents.py  create.py  hooks.py  utils.py
tests/: test_neuralnoise.py
