[tool.poetry]
name = "neuralnoise"
version = "0.1.0"
description = ""
authors = ["Leonardo Piñeyro <leopiney@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
nn = "neuralnoise.cli:app"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = "^2.32.3"
openai = "^1.51.2"
elevenlabs = "^1.9.0"
pydub = "^0.25.1"
streamlit = "^1.39.0"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
typer = "^0.12.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
mypy = "^1.11.2"
isort = "^5.13.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
